# qoiview

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: fetched-libs.cmake
include/qoiview/: async_decoder.hpp  qoiview.hpp
source/: async_decoder.cpp  common.hpp  main.cpp  qoiview.cpp  qoiview.hpp
